@@ -109,6 +109,7 @@ Hard states occur for hosts and services in the following situations:
 <li>When a host or service transitions from one hard error state to another error state (e.g. WARNING to CRITICAL).</li>
 <li>When a service check results in a non-OK state and its corresponding host is either DOWN or UNREACHABLE.
 <li>When a host or service recovers from a hard error state.  This is considered to be a hard recovery.
+<li>When a <a href="passivechecks.html">passive host check</a> is received. Passive host checks are treated as HARD unless the <a href="configmain.html#passive_host_checks_are_soft">passive_host_checks_are_soft</a> option is enabled.</li>
 </ul>
 </p>
 
